<resources>
    <string name="app_name">Handyman</string>
    <string name="logo">Logo</string>
    <string name="Monospace_Logoname">H A N D Y M A N</string>
    <string name="Monospace_Welcome">W E L C O M E</string>
    <string name="Signup">SIGN IN</string>
    <string name="tools_pic">TODO</string>
    <string name="username_area">Username</string>
    <string name="password_area">Password</string>
    <string name="submit_button">S U B M I T</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="signuphere">SIGN UP HERE</string>
    <string name="welcome_user">Welcome, Natalia!</string>
    <string name="password">Password</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="my_account">My Account</string>
    <string name="chat">Chat</string>
    <string name="hammer">TODO</string>
    <string name="how_can_i_help_you_today">What can I help you with today?</string>
    <string name="home_look">TODO</string>
    <string name="Electricity">TODO</string>
    <string name="something">TODO</string>
    <string name="something1">TODO</string>
    <string name="something2">TODO</string>
    <string name="car">TODO</string>
    <string name="home_care">Home Care</string>
    <string name="electric">Electric</string>
    <string name="plumbing">Plumbing</string>
    <string name="pest_control">Pest Control</string>
    <string name="appliances">Appliances</string>
    <string name="auto_care">Auto Care</string>
    <string name="invisible_plumbing">TODO</string>
    <string name="something4">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="elect">TODO</string>
    <string name="lll">TODO</string>
    <string name="mmm">TODO</string>
    <string name="ll">TODO</string>
    <string name="pp">TODO</string>
    <string name="home_care1">Home Care</string>
    <string name="electric111">Electric</string>
    <string name="plumbing101">Plumbing</string>
    <string name="pest_control101">Pest Control</string>
    <string name="appliances101">Appliances</string>
    <string name="auto_care101">Auto Care</string>
    <string name="plumbing102">Plumbing</string>
    <string name="buttonnnn">Blocks &amp; Leakages</string>
    <string name="buttonv">Bathroom Water Filters</string>
    <string name="buttons">Water Tank Problems</string>
    <string name="buttone">Tap, Wash Basin &amp; Sink Problems</string>
    <string name="todo454">TODO</string>
    <string name="todo647">TODO</string>
    <string name="todo1241">TODO</string>
    <string name="todo54747">TODO</string>
    <string name="pipe_lines_pumps"><![CDATA[Pipe lines & pumps]]></string>
    <string name="bathroom_fittings">Bathroom Fittings</string>
    <string name="water_tank_problems">Water Tank Problems</string>
    <string name="handyman1">Aida Dahm | </string>
    <string name="handyman2">Carisa Solem |</string>
    <string name="handyman3">Keith Predmore | </string>
    <string name="ima1">TODO</string>
    <string name="ima2">TODO</string>
    <string name="ima3">TODO</string>
    <string name="plumber1">Plumber</string>
    <string name="todooooo">TODO</string>
    <string name="todoom">TODO</string>
    <string name="todo1112">TODO</string>
    <string name="_18_00_per_hour">$ 18.00 / per hour</string>
    <string name="_16_00_per_hour">$ 16.00 / per hour</string>
    <string name="_25_00_per_hour">$ 25.00 / per hour</string>
    <string name="carisa_solem">Carisa Solem | <em>Plumber</em></string>
    <string name="my_reviews">My Reviews <em>(5.0)</em></string>
    <string name="todo120039">TODO</string>
    <string name="your_name">Your Name</string>
    <string name="create_username">Create Username</string>
    <string name="todo098">TODO</string>
    <string name="your_address">Your Address</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="create_password">Create Password</string>
    <string name="your_e_mail_address">Your E-mail Address</string>


</resources>