<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="178dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="80sp"
        android:contentDescription="@string/tools_pic"
        app:srcCompat="@drawable/logo_pic_foreground"
        tools:ignore="VectorDrawableCompat"
        />

    <TextView
        android:id="@+id/text1"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="220sp"
        android:gravity="center_horizontal"
        android:text="@string/Signup"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="270dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/username_area"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:autofillHints=""
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="320dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/password_area"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:autofillHints=""
        />

    <Button
        android:id="@+id/button"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="400dp"
        android:text="@string/submit_button"
        android:backgroundTint="@color/black"
        android:textSize="18sp"
        tools:targetApi="lollipop" />



</RelativeLayout>